# Ainan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  premake5.lua
.circleci/: config.yml
src/: CMakeLists.txt  Camera.cpp  CurveEditor.cpp  CurveEditor.h  EditorStyles.cpp  EditorStyles.h  EnvLoad.cpp  EnvSave.cpp  Environment.cpp  Environment.h  FileBrowserGUI.cpp  FileBrowserGUI.h  FileManager.cpp  FileManager.h  FolderBrowserGUI.cpp  FrameBuffer.cpp  FrameBuffer.h  GLFWKeyToString.h  GaussianBlur.cpp  GaussianBlur.h  GeneralSettingsGUI.cpp  GeneralSettingsGUI.h  ImGuiWrapper.cpp  ImGuiWrapper.h  Image.cpp  Image.h  InputManager.cpp  InspectorInterface.h  Interpolation.h  InterpolationSelector.h  Interpolator.h  Log.cpp  Log.h  Particle.cpp  Particle.h  ParticleCustomizer.cpp  ParticleCustomizer.h  ParticleSystem.cpp  ParticleSystem.h  PerlinNoise2D.h  (+13 more)
src/Customizers/: ColorCustomizer.cpp  ColorCustomizer.h  LifetimeCustomizer.cpp  LifetimeCustomizer.h  ScaleCustomizer.cpp  ScaleCustomizer.h  VelocityCustomizer.cpp  VelocityCustomizer.h
src/customizers/: ColorCustomizer.cpp  ColorCustomizer.h  ForceCustomizer.cpp  ForceCustomizer.h  LifetimeCustomizer.cpp  LifetimeCustomizer.h  NoiseCustomizer.cpp  NoiseCustomizer.h  ScaleCustomizer.cpp  ScaleCustomizer.h  TextureCustomizer.cpp  TextureCustomizer.h  VelocityCustomizer.cpp  VelocityCustomizer.h
src/editor/: AppStatusWindow.cpp  AppStatusWindow.h  Background.cpp  Background.h  CMakeLists.txt  Camera.cpp  Camera.h  CircleOutline.cpp  CircleOutline.h  CurveEditor.cpp  CurveEditor.h  Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorPreferences.cpp  EditorPreferences.h  EditorStyles.cpp  EditorStyles.h  ExportCamera.cpp  ExportCamera.h  Exporter.cpp  Exporter.h  GLFWKey.h  Gizmo.cpp  Gizmo.h  Grid.cpp  Grid.h  ImGuiWrapper.cpp  ImGuiWrapper.h  InputManager.cpp  InputManager.h  InterpolationSelector.cpp  InterpolationSelector.h  Line.cpp  Line.h  ParticleCustomizer.cpp  ParticleCustomizer.h  Profiler.cpp  Profiler.h  (+6 more)
src/editor/customizers/: ColorCustomizer.cpp  ColorCustomizer.h  ForceCustomizer.cpp  ForceCustomizer.h  LifetimeCustomizer.cpp  LifetimeCustomizer.h  NoiseCustomizer.cpp  NoiseCustomizer.h  ScaleCustomizer.cpp  ScaleCustomizer.h  TextureCustomizer.cpp  TextureCustomizer.h  VelocityCustomizer.cpp  VelocityCustomizer.h
src/environment/: CMakeLists.txt  Camera.cpp  Camera.h  CameraObject.cpp  CameraObject.h  EnvLoad.cpp  EnvSave.cpp  Environment.cpp  Environment.h  EnvironmentData.h  EnvironmentObjectInterface.cpp  EnvironmentObjectInterface.h  InspectorInterface.h  LitSprite.cpp  LitSprite.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  RadialLight.cpp  RadialLight.h  Skybox.cpp  Skybox.h  SpotLight.cpp  SpotLight.h  Sprite.cpp  Sprite.h  UUID.cpp  UUID.h  Window.cpp  Window.h
src/file/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  FileBrowser.cpp  FileBrowser.h  FileManager.cpp  FileManager.h  FolderBrowser.cpp  FolderBrowser.h  Image.cpp  Image.h  SaveItemBrowser.cpp  SaveItemBrowser.h  stb_image_write.cpp  stb_image_write.h
src/glad/: glad.c
src/graphics/: Background.cpp  Background.h  CircleOutline.cpp  CircleOutline.h  FrameBuffer.cpp  FrameBuffer.h  GaussianBlur.cpp  GaussianBlur.h  Grid.cpp  Grid.h  IndexBuffer.h  Line.cpp  Line.h  RadialLight.h  RenderSurface.cpp  RenderSurface.h  RendererAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.h
src/gui/: FileBrowserGUI.cpp  FileBrowserGUI.h  FolderBrowserGUI.cpp  FolderBrowserGUI.h  GeneralSettingsGUI.cpp  GeneralSettingsGUI.h  InterpolationSelector.h  Interpolator.h  ParticleCustomizer.cpp  ParticleCustomizer.h
src/gui/customizers/: ColorCustomizer.cpp  ColorCustomizer.h  LifetimeCustomizer.cpp  LifetimeCustomizer.h  NoiseCustomizer.cpp  NoiseCustomizer.h  ScaleCustomizer.cpp  ScaleCustomizer.h  TextureCustomizer.cpp  TextureCustomizer.h  VelocityCustomizer.cpp  VelocityCustomizer.h
src/imgui/: imgui_impl_opengl3.cpp
src/input/: GLFWKeyToString.h  InputManager.cpp  InputManager.h
src/math/: Interpolation.h  PerlinNoise2D.cpp  PerlinNoise2D.h
src/misc/: AppStatusWindow.cpp  AppStatusWindow.h  AssetManager.cpp  AssetManager.h  Background.cpp  Background.h  Camera.cpp  Camera.h  CircleOutline.cpp  CircleOutline.h  CurveEditor.cpp  CurveEditor.h  EditorStyles.cpp  EditorStyles.h  EnvLoad.cpp  EnvSave.cpp  Environment.cpp  Environment.h  EnvironmentFileExplorer.cpp  EnvironmentFileExplorer.h  EnvironmentObjectInterface.cpp  EnvironmentObjectInterface.h  ExportCamera.cpp  ExportCamera.h  ExposeToJson.h  GLFWKey.h  GaussianBlur.cpp  GaussianBlur.h  GeneralSettingsGUI.cpp  GeneralSettingsGUI.h  Gizmo.cpp  Gizmo.h  Grid.cpp  Grid.h  ImGuiWrapper.cpp  ImGuiWrapper.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  (+20 more)
src/noise/: PerlinNoise2D.cpp  PerlinNoise2D.h
src/object/: ParticleSystem.cpp  ParticleSystem.h  RadialLight.cpp  RadialLight.h  SpotLight.cpp  SpotLight.h  Sprite.cpp  Sprite.h
src/opengl/: OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
src/renderer/: Background.cpp  Background.h  CMakeLists.txt  Camera.cpp  Camera.h  CircleOutline.cpp  CircleOutline.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.cpp  GaussianBlur.cpp  GaussianBlur.h  Image.cpp  Image.h  IndexBuffer.h  Line.cpp  Line.h  RadialLight.cpp  RadialLight.h  Rectangle.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderSurface.cpp  RenderSurface.h  Renderer.cpp  Renderer.h  RendererAPI.h  RendererContext.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Viewport.h
src/windows/: WinMain.cpp  WindowsFileEvaluator.cpp  WindowsFileEvaluator.h
(+95 files in other folders)
